Add renderMeme function

--- a/index.html
+++ b/index.html
@@ -1,23 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Meme Generator</title>
-  <link rel="stylesheet" href="/styles/styles.css" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Meme Generator</title>
+        <link rel="stylesheet" href="/styles/styles.css" />
+    </head>
+    <body>
+        <header>Meme Generator</header>
 
-</head>
-<body>
-   <header>Meme Generator</header>
+        <section class="gallery">
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/1.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+            />
+            <!-- <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/2.jpg"
+                alt=""
+                onclick="renderMeme(this)"
 
-   <section class="gallery">
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/3.jpg"
+                alt=""
+                onclick="renderMeme(this)"
 
-   </section>
-   <section class="editor">
-      
-   </section>
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/4.jpg"
+                alt=""
+                onclick="renderMeme(this)"
 
-   <script src="js/meme-service.js"></script>
-   <script src="js/meme-controller.js"></script>
-</body>
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/5.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/6.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/7.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/8.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/9.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/10.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/11.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/12.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/13.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/14.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/15.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/16.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/17.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs (square)/18.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            /> -->
+        </section>
+        <section class="editor">
+            <div class="canvas-container">
+                <canvas width="400" height="400" class="meme-canvas"> 
+                  <h1>aaa</h1>
+                </canvas>
+            </div>
+        </section>
+
+        <script src="js/meme-service.js"></script>
+        <script src="js/meme-controller.js"></script>
+    </body>
 </html>
