Improve renderMeme function

--- a/index.html
+++ b/index.html
@@ -12,124 +12,124 @@
         <section class="gallery">
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/1.jpg"
+                src="/meme-imgs/meme-imgs(square)/1.jpg"
                 alt=""
-                onclick="renderMeme(this)"
+                onclick="renderMeme()"
             />
             <!-- <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/2.jpg"
+                src="/meme-imgs/meme-imgs(square)/2.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/3.jpg"
+                src="/meme-imgs/meme-imgs(square)/3.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/4.jpg"
+                src="/meme-imgs/meme-imgs(square)/4.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/5.jpg"
+                src="/meme-imgs/meme-imgs(square)/5.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/6.jpg"
+                src="/meme-imgs/meme-imgs(square)/6.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/7.jpg"
+                src="/meme-imgs/meme-imgs(square)/7.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/8.jpg"
+                src="/meme-imgs/meme-imgs(square)/8.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/9.jpg"
+                src="/meme-imgs/meme-imgs(square)/9.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/10.jpg"
+                src="/meme-imgs/meme-imgs(square)/10.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/11.jpg"
+                src="/meme-imgs/meme-imgs(square)/11.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/12.jpg"
+                src="/meme-imgs/meme-imgs(square)/12.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/13.jpg"
+                src="/meme-imgs/meme-imgs(square)/13.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/14.jpg"
+                src="/meme-imgs/meme-imgs(square)/14.jpg"
                 alt=""
                 onclick="renderMeme(this)"
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/15.jpg"
-                alt=""
-                onclick="renderMeme(this)"
-
-            />
-            <img
-                class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/16.jpg"
+                src="/meme-imgs/meme-imgs(square)/15.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/17.jpg"
+                src="/meme-imgs/meme-imgs(square)/16.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
             />
             <img
                 class="meme-img"
-                src="/meme-imgs/meme-imgs (square)/18.jpg"
+                src="/meme-imgs/meme-imgs(square)/17.jpg"
+                alt=""
+                onclick="renderMeme(this)"
+
+            />
+            <img
+                class="meme-img"
+                src="/meme-imgs/meme-imgs(square)/18.jpg"
                 alt=""
                 onclick="renderMeme(this)"
 
@@ -137,8 +137,8 @@
         </section>
         <section class="editor">
             <div class="canvas-container">
-                <canvas width="400" height="400" class="meme-canvas"> 
-                  <h1>aaa</h1>
+                <canvas width="400" height="400" class="meme-canvas">
+                    <h1>aaa</h1>
                 </canvas>
             </div>
         </section>
