Show image in editor on press

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
             /> -->
         </section>
-        <section class="editor">
+        <section class="editor hidden">
          <input type="text" id="text-input" oninput="onSetLineTxt(this.value)">
             <div class="canvas-container">
                 <canvas width="500" height="500" class="meme-canvas">
