Add an addLine function

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 />
                 <button class="incress" onclick="onIncrease()">⬆️</button>
                 <button class="decrease" onclick="onDecrease()">⬇️</button>
+                <button class="AddLine" onclick="onAddLine()">➕</button>
             </section>
         </main>
 
