Add switchLine function

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                 />
                 <button class="incress" onclick="onIncrease()">⬆️</button>
                 <button class="decrease" onclick="onDecrease()">⬇️</button>
-                <button class="AddLine" onclick="onAddLine()">➕</button>
+                <button class="add-line" onclick="onAddLine()">➕</button>
+                <button class="switch-line" onclick="onSwitchLine()">🔃</button>
             </section>
         </main>
 
