--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body onload="onInit()">
         <header class="header flex">
          <h2 class="logo">Memegen</h2>
-<button class="btn-toggle-menu btn" onclick="toggleMenu()">☰</button>
+         <button></button>
+     <!-- <button class="btn-toggle-menu btn" onclick="toggleMenu()">☰</button> -->
       </header>
 
         <main class="gallery grid">
