--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
         <title>Meme Generator</title>
         <link rel="stylesheet" href="/styles/styles.css" />
     </head>
-    <body onload="onInit()">
+    <body onload="onInit()" class="main-layout">
         <header class="header flex">
-         <h2 class="logo">Memegen</h2>
-         <button></button>
+         <h2 class="logo">MemeGenerator</h2>
+         <nav>
+         <button onclick="openGallery()">Gallery</button>
+         <button onclick="">Saved</button>
+         <button onclick="">About</button>
+         </nav>
      <!-- <button class="btn-toggle-menu btn" onclick="toggleMenu()">☰</button> -->
       </header>
 
@@ -19,7 +23,7 @@
 
         <main class="editor hidden">
             <section class="canvas-container">
-                <canvas width="500" height="500" class="meme-canvas"> </canvas>
+                <canvas width="450" height="450" class="meme-canvas" onclick="onDragLine(event)"> </canvas>
             </section>
 
             <section class="operations">
@@ -29,27 +33,32 @@
                     oninput="onSetLineTxt(this.value)"
                     placeholder="enter text here"
                 />
-                <a
-                    href="#"
-                    class="btn download"
-                    onclick="onDownloadCanvas(this)"
-                    download="my-img.jpg"
-                    >Download</a
-                >
                 <label class="color-btn btn">
-                <input
-                    type="color"
-                    id="color-input"
-                    oninput="onSetColor(this.value)"
-                    class="color"
-                />🎨</label>
-                <button class="incress btn" onclick="onIncrease()">⬆️</button>
-                <button class="decrease btn" onclick="onDecrease()">⬇️</button>
-                <button class="add-line btn" onclick="onAddLine()">➕</button>
-                <button class="switch-line btn" onclick="onSwitchLine()">🔃</button>
+                   <input
+                   type="color"
+                   id="color-input"
+                   oninput="onSetColor(this.value)"
+                   class="color"
+                   />🎨</label>
+                   <button class="incress btn" onclick="onIncrease()">⬆️</button>
+                   <button class="decrease btn" onclick="onDecrease()">⬇️</button>
+                   <button class="add-line btn" onclick="onAddLine()">➕</button>
+                   <button class="switch-line btn" onclick="onSwitchLine()">🔃</button>
+                   <a
+                       href="#"
+                       class="btn download"
+                       onclick="onDownloadCanvas(this)"
+                       download="my-img.jpg"
+                       >Download</a
+                   >
             </section>
         </main>
+        <main class="about hidden">
+           
+      <p>This project was created as a part of coding academy course
 
+      </p>
+   </main>
         <script src="js/meme-service.js"></script>
         <script src="js/meme-controller.js"></script>
         <script src="js/gallery-controller.js"></script>
