--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <main class="editor hidden">
             <section class="canvas-container">
-                <canvas width="450" height="450" class="meme-canvas" onclick="onDragLine(event)"> </canvas>
+                <canvas width="450" height="450" class="meme-canvas" onclick="onPressLine(event)"> </canvas>
             </section>
 
             <section class="operations">
@@ -54,11 +54,12 @@
             </section>
         </main>
         <main class="about hidden">
-           
+           <h1>All right reserved to Shaked livyani</h1>
       <p>This project was created as a part of coding academy course
 
       </p>
    </main>
+   <footer class="footer">Made by Shaked Livyani</footer>
         <script src="js/meme-service.js"></script>
         <script src="js/meme-controller.js"></script>
         <script src="js/gallery-controller.js"></script>
