--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body onload="onInit()" class="main-layout">
         <header class="header flex">
-         <h2 class="logo">MemeGenerator</h2>
+         <img class="logo" src="/meme-imgs/LOGO.png"></img>
          <nav>
          <button onclick="openGallery()">Gallery</button>
          <!-- <button onclick="showSavedMemes()">Saved</button> -->
